<resources>
    <string name="app_name">12Pubs</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_pubs">Pubs</string>
    <string name="menu_maps">Maps</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_group">Group</string>
    <string name="settings">Settings</string>
    <string name="account">Account QRCode</string>
    <string name="profile">Profile</string>
    <string name="maps">Maps</string>
    <string name="pubs">Pubs</string>
    <string name="home">Home</string>
    <string name="group">Group</string>
    <string name="navigation">Navigation</string>
    <string name="sign_out">Sign Out</string>
    <string name="signout">Signout</string>
    <string name="SelectGroupImage">Select Group Image</string>
    <string name="SelectProfileImage">Select Profile Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>