<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="Izaac.Doyle.PubsApp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_group"
            app:destination="@id/nav_group" />
        <action
            android:id="@+id/action_nav_home_to_nav_pubs"
            app:destination="@id/nav_pubs" />
        <action
            android:id="@+id/action_nav_home_to_nav_maps"
            app:destination="@id/nav_maps"
            app:popUpTo="@id/nav_maps" />
        <action
            android:id="@+id/action_nav_home_to_rulesFragment"
            app:destination="@id/nav_rules" />
    </fragment>

    <fragment
        android:id="@+id/nav_pubs"
        android:name="Izaac.Doyle.PubsApp.ui.pubs.PubsFragment"
        android:label="@string/menu_pubs"
        tools:layout="@layout/fragment_pubs" />

    <fragment
        android:id="@+id/nav_maps"
        android:name="Izaac.Doyle.PubsApp.ui.Maps.MapsFragment"
        android:label="@string/menu_maps"
        tools:layout="@layout/fragment_maps">
        <action
            android:id="@+id/action_nav_maps_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="Izaac.Doyle.PubsApp.ui.Settings.SettingsFragment"
        android:label="@string/menu_settings" >
        <action
            android:id="@+id/action_nav_settings_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_settings_to_settings_update_info"
            app:destination="@id/settings_update_info" />
    </fragment>
    <fragment
        android:id="@+id/nav_group"
        android:name="Izaac.Doyle.PubsApp.ui.Group.GroupsFragment"
        android:label="@string/menu_group" />
    <dialog
        android:id="@+id/settings_update_info"
        android:name="Izaac.Doyle.PubsApp.ui.Settings.settings_update_info"
        android:label="settings_update_info" >
        <argument
            android:name="accountID"
            app:argType="string" />
    </dialog>
    <fragment
        android:id="@+id/nav_rules"
        android:name="Izaac.Doyle.PubsApp.ui.Rules.RulesFragment"
        android:label="RulesFragment" />
</navigation>